# MeloInf

./: .flake8  .gitignore  .pylintrc  README.md  main.py  pdm.toml  pyproject.toml  requirements.txt
config/: bot_config.toml  melobot_config.toml
plugins/: auth.toml  env.py  public_utils.py  settings.toml  settings.toml.bak  utils.py
plugins/anime/: __init__.py  _iface.py  recoginize.py
plugins/asoul_illness/: __init__.py  data.json
plugins/base_utils/: __init__.py  recovery.py  utils.py
plugins/basic_info/: __init__.py
plugins/bullshit_gen/: __init__.py  gen.py  readJSON.py
plugins/calculator/: __init__.py
plugins/code_compile/: __init__.py
plugins/dice_simulator/: __init__.py  _iface.py  decks_cmd.toml  functions.py  utils.py
plugins/dice_simulator/decks/: abo.json  computer.json  door.json  eat_what.json  heart_emoji.json  honor.json  music_motivation.json  sentence.json  super.json  three-meals.json  (+2 more)
plugins/kimichat/: __init__.py
plugins/lifecycle/: __init__.py  _iface.py  functions.py  recovery.py
plugins/news/: __init__.py
plugins/pic_recognition/: __init__.py
plugins/random_pic/: __init__.py  utils.py
plugins/shell/: __init__.py  _iface.py  functions.py  utils.py
plugins/test_utils/: __init__.py  _iface.py  common.py  core_debug.py  core_debugger.py  session_test.py  session_tester.py
plugins/translator/: __init__.py  utils.py
plugins/weather/: __init__.py  make_fig.py
plugins/word_lib/: __init__.py  dict.py  dict_build.py  words.txt  words.txt.bak
src/: env.py  env.toml  main.py  utils.py
src/platform/: onebot.py
(+18 files in other folders)
